<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/exchange_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/exchange_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/from_label"
                style="@style/Text.Medium.Normal.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exchange_label_from"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/from_currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/from_label" />

            <TextView
                android:id="@+id/to_label"
                style="@style/Text.Medium.Normal.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exchange_label_to"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/to_currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/to_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/amount_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/color_secondary"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/amount_label_text_view"
                style="@style/Text.Medium.Normal.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exchange_label_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/amount_edit_text"
                style="@style/Text.Medium.Large.Light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/text_color_light"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:textSize="24sp"
                android:hint="@string/exchange_label_amount_hint"
                android:textColorHint="@color/text_color_light_alpha_70"
                app:layout_constraintEnd_toStartOf="@id/selected_currency_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amount_label_text_view" />

            <TextView
                android:id="@+id/selected_currency_text_view"
                style="@style/Text.Medium.Large.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="@id/amount_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="BTC" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/exchange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/exchange_title" />

</LinearLayout>